@@ -3,6 +3,7 @@
   * Added the following instance methods to Druid
   * #button
   * #text_field
+  * #hidden_field
 === 2016-07-05
 * Enhancements
   * Added #value= to TextField and TextArea
